# MEDILOGIC---Ai-Agents-In-Cryptocurrency-trading-In-Blockchain

./: .bandit  .gitignore  Aligning Frontend With Backend.md  Completing the Agent Lifecycle- Monitoring & Adjustment.md  Final Walkthrough- Zero-Cost Backtesting & Live Pricing walkthrough.md  Front-to-Back Connectivity Audit & Enhancement Plan.md  Frontend-Backend Integration Walkthrough.md  LICENSE  LICENSE-AGPL  LICENSE.md  MiniMax & OpenRouter Provider Discovery Plan.md  Modelfile  Monitoring and Adjustment Nodes Task List.md  NOFX Feature Parity & Premium UX Upgrade Plan.md  Next Steps- Strategy, Education, and Live Mode.md  OpenRouter Integration & Reasoning Model Upgrade Walkthrough.md  OpenRouter Integration & Reasoning Model Upgrade.md  README.md  Restricted Backtesting & Dynamic OpenRouter Pricing Plan.md  Strategy, FAQ, and Live Mode Task List.md  UI Refactor- Sidebar Layout & Dual-Mode Navigation.md  Update install.md with Today's Systemic Upgrades.md  Walkthrough- Front-to-Back Connectivity & Interaction Upgrade.md  Walkthrough- MiniMax & Provider Discovery Upgrade.md  Walkthrough- NOFX Feature Parity & Premium UX Upgrade.md  docker-compose.yml  foundry.toml  implementation_plan vol 2.md  implementation_plan.md  install.md  package-lock.json  start.sh  startup_check.sh  tFront-to-Back Connectivity Enhancement Task List.md  task.md  walkthrough.md
backend/: Dockerfile  pyproject.toml  requirements.txt  test_all_imports.py  test_imports.py
backend/app/: main.py
backend/tests/: test_full_trade_flow.py  test_risk_engine.py  test_risk_integration.py  (+1 more)
(+115 files in other folders)
